# Isometric-Extractor

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
apps/poc-web/: README.md  package-lock.json  package.json
apps/poc-web/src/app/: layout.tsx  page.tsx
apps/poc-web/src/components/: BomTable.tsx  DrawingAnalyzer.tsx  UploadZone.tsx  ViewerDrawing.tsx
apps/poc-web/src/lib/: types.ts
apps/poc-web/src/lib/analyzer/: bom-parser.ts  callout-detector.ts  export-annotated-pdf.ts  geometry.ts  index.ts  line-tracer.ts  ocr.ts  render-pdf.ts  text-lines.ts
docs/: DATASET_SCHEMA.md  FREE_STACK.md  PHASE_A1.md  PLAN.md  PLAN_NATIVE_PIPELINE.md
