[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "isometric-extractor"
version = "0.1.0"
description = "Synthetic isometric drawing generator and BOM extraction pipeline"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "click>=8.1",
  "ezdxf>=1.3",
  "matplotlib>=3.8",
  "numpy>=1.26",
  "Pillow>=10.0",
  "PyYAML>=6.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "ruff>=0.4"]

[project.scripts]
synth-gen = "synth_gen.cli:main"

[tool.setuptools.packages.find]
where = ["packages/synth-gen"]

[tool.ruff]
line-length = 100
